--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 PORT=1337
 
 # MongoDB Connection URL
-MONGO_CONNECTION="mongodb://localhost:27018/explore-shackle"
+MONGO_CONNECTION="mongodb://localhost:27018/dbName"
